# ChangeLog for media-video/ffmpeg
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Mar 2011; Nikoli <nikoli@lavabit.com> ffmpeg-9999.ebuild,
  +files/ffmpeg-ffpreset.patch:
  libswscale is part of ffmpeg repo, cosmetics

*ffmpeg-9999 (26 Dec 2010)

  26 Dec 2010; Nikoli <nikoli@lavabit.com> -ffmpeg-0.6.ebuild,
  +ffmpeg-9999.ebuild, -ffmpeg-9999-r1.ebuild, metadata.xml:
  remove old, sync with portage

  15 Nov 2010; Nikoli <nikoli@lavabit.com> ffmpeg-9999-r1.ebuild,
  metadata.xml:
  migrate to git, support ffmpeg-mt, sync with portage

  20 Jun 2010; Steve Dibb <beandog@gentoo.org> ChangeLog:
  Drop support for FAAD (removed upstream)

  18 Jun 2010; Nikoli <nikoli@lavabit.com> ffmpeg-0.6.ebuild,
  ffmpeg-9999-r1.ebuild:
  fixed configure; cosmetics

*ffmpeg-9999-r1 (17 Jun 2010)
*ffmpeg-0.6 (17 Jun 2010)

  17 Jun 2010; Nikoli <nikoli@lavabit.com> +ffmpeg-0.6.ebuild,
  +ffmpeg-9999-r1.ebuild, +metadata.xml:
  testing some fixes
