@@ -1,4 +1,4 @@
 AUX ffmpeg-ffpreset.patch 1029 RMD160 d115b11237f9331d9df9c54b6f3a85f9c49580fb SHA1 2af7f95e08aef5fd3c8ea4180ca9ab0427dd6999 SHA256 93b454b3de36937134a1cc1a1b00db7c73f040e78b50eee5a6f2ed0e708702d0
-EBUILD ffmpeg-9999.ebuild 8424 RMD160 1a9d9587ff276aabe949e6b131622d23f710679d SHA1 26447a4643fd41ffe2d5bc3d6324b15ea0337e05 SHA256 f144845d89d67aa059c94a190355cd1a547741a2e5c1ad8ae70a360a754c7013
-MISC ChangeLog 987 RMD160 79cc646ffda805e5ed30e9f042e60041435dfb31 SHA1 27b0c0d91a97bd42c98c4cecc23133e5647dd8ea SHA256 c5725189289dc5c8095ea3daa6ce7adc9f6d8eb57dd2b62b9392ceca33d16e24
+EBUILD ffmpeg-9999.ebuild 8181 RMD160 7bd381ad869e71c4db04376e19cce085463f1232 SHA1 2d753aeeb71c073a36b259bbbfc49a6345d68106 SHA256 a225900955792ac0cb3ac4bf279ed0f6d7f8699a6cc3325273c4f62dfb461de2
+MISC ChangeLog 1123 RMD160 6e3f1a6f99fc3b9721cec4a48d7b244c41d907d9 SHA1 21ebcf0dbc86e548afa8d1e454ec7d340a8718ac SHA256 38e91c18bca6d6c78240462ae47fb13037694722c3919cccf547746bf2a544e7
 MISC metadata.xml 2037 RMD160 2623b1664678435eea628042f58cd0ed6ecd13ce SHA1 071745c6335645599f29137f558afc5941bd1e4c SHA256 d8c8452be59912c1d0cad56cd81fe863ffac096d4d58ed3fa8e14069d8b073e4
