@@ -1,13 +1,13 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ffmpeg-9999.ebuild,v 1.31 2011/03/10 03:50:26 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ffmpeg-9999.ebuild,v 1.32 2011/03/21 11:37:03 aballier Exp $
 
 EAPI="2"
 
 SCM=""
 if [ "${PV#9999}" != "${PV}" ] ; then
 	SCM="git"
-	EGIT_REPO_URI="git://git.ffmpeg.org/ffmpeg.git"
+	EGIT_REPO_URI="git://git.videolan.org/ffmpeg.git"
 fi
 
 inherit eutils flag-o-matic multilib toolchain-funcs ${SCM}
@@ -86,14 +86,6 @@ src_unpack() {
 		fi
 		git_src_unpack
 
-		if use ffmpeg-mt; then
-			cd "${S}"
-			EGIT_COMMIT="$(git submodule status -- libswscale|sed -e 's/^-\(.*\) .*/\1/')"
-			EGIT_REPO_URI="git://git.ffmpeg.org/libswscale"
-			EGIT_PROJECT="${PN}-libswscale"
-			S+="/libswscale"
-			git_fetch
-		fi
 		S="${WORKDIR}/${P}"
 
 		cd "${WORKDIR}"
